<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/personal_setting_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/left_bg_unselect"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <ImageButton
            android:id="@+id/title_perset_ibtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_top_button"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title_perset_tv_changepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/changepassword"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/title_changepwd_ibtn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_top_button"
            android:src="@drawable/change_password_tile_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_horizontal_line"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/left_bg_unselect" >

        <TextView
            android:id="@+id/changpwd_tv_oldpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="旧密码"
            android:textColor="@color/color_qianhui"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/changepwd_et_oldpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/changpwd_tv_oldpwd"
            android:background="#00000000"
            android:hint="@string/passwordprompt1"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/change_password_tile_right"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/left_bg_unselect" >

        <TextView
            android:id="@+id/changpwd_tv_oldpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="新密码"
            android:textColor="@color/color_qianhui"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/changepwd_et_oldpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/changpwd_tv_oldpwd"
            android:background="#00000000"
            android:hint="@string/passwordprompt2"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/change_password_tile_right"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/left_bg_unselect" >

        <TextView
            android:id="@+id/changpwd_tv_oldpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="确认密码"
            android:textColor="@color/color_qianhui"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/changepwd_et_oldpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/changpwd_tv_oldpwd"
            android:background="#00000000"
            android:hint="@string/passwordprompt3"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/change_password_tile_right"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>